<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_title_label"/>

    <EditText
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_prompt"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <CheckBox
            android:id="@+id/question_true_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_true_label"
            app:buttonTint="#4CAF50" />

        <CheckBox
            android:id="@+id/question_false_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_false_label"
            app:buttonTint="#E91E63" />
    </LinearLayout>

    <Button
        android:id="@+id/delete_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:text="@string/delete_button"
        android:textColor="#000000"
        android:textStyle="bold"
        app:backgroundTint="#E91E63" />



</LinearLayout>